--- a/main.css
+++ b/main.css
@@ -25,6 +25,16 @@ body {
   background-color: var(--site-color-05);
 }
 
+/* SOCIAL MEDIA IMG PRELOAD */
+body:after {
+  position: absolute;
+  width: 0;
+  height: 0;
+  overflow: hidden;
+  z-index: -100;
+  content: url(../img/Icons/instagram-color.png) url(../img/Icons/facebook-color.png) url(../img/Icons/x-logo-white.png);
+}
+
 /* MAIN WRAPPER */
 .wrapper-main {
   width: 1200px;
@@ -34,79 +44,78 @@ body {
 /* LINK STYLES */
 a {
   cursor: pointer;
-  color: #fff;
+  color: var(--site-color-06);
 }
 
 /* FONT STYLES */
 h1 {
   font-size: 4.8rem;
-  color: #fff;
   font-family: Montserrat, Arial, Helvetica, sans-serif;
   font-weight: 800;
+  color: var(--site-color-06);
 }
 
 h2 {
   font-size: 3.6rem;
-  color: #fff;
   font-family: Montserrat, Arial, Helvetica, sans-serif;
   font-weight: 700;
+  color: var(--site-color-06);
 }
 
 h3 {
   font-size: 2.4rem;
-  line-height: 1.15;
-  color: #fff;
   font-family: Montserrat, Arial, Helvetica, sans-serif;
   font-weight: 600;
+  line-height: 1.15;
+  color: var(--site-color-06);
 }
 
 h4 {
   font-size: 2.0rem;
-  line-height: 1.15;
-  color: #fff;
   font-family: Montserrat, Arial, Helvetica, sans-serif;
   font-weight: 600;
+  line-height: 1.15;
+  color: var(--site-color-06);
 }
 
 h5 {
   font-size: 2.0rem;
-  line-height: 1.15;
-  color: #fff;
   font-family: Montserrat, Arial, Helvetica, sans-serif;
   font-weight: 500;
+  line-height: 1.15;
+  color: var(--site-color-06);
 }
 
 p {
   font-size: 1.6rem;
-  line-height: 1.5;
-  color: #fff;
   font-family: Montserrat, Arial, Helvetica, sans-serif;
   font-weight: 400;
+  line-height: 1.5;
+  color: var(--site-color-06);
 }
 
 li {
   font-size: 1.6rem;
-  line-height: 1.5;
-  color: #fff;
   font-family: Montserrat, Arial, Helvetica, sans-serif;
   font-weight: 400;
+  line-height: 1.5;
+  color: var(--site-color-06);
 }
 
 /* BOOK A CALL CTA BUTTON */
 .cta-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 136px;
   height: 36px;
   background-color: var(--site-color-01);
   font-size: 1.6rem;
   font-family: Montserrat, Arial, Helvetica, sans-serif;
   font-weight: 700;
-  color: #ffffff;
+  color: var(--site-color-06);
   border: none;
   border-radius: 4px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
 }
 
 .cta-btn:hover {
@@ -134,7 +143,7 @@ li {
   font-size: 2.4rem;
   font-family: Montserrat, Arial, Helvetica, sans-serif;
   font-weight: 700;
-  color: #fff;
+  color: var(--site-color-06);
   display: flex;
   align-items: center;
   padding-left: 24px;
@@ -151,16 +160,16 @@ li {
   font-size: 1.6rem;
   font-family: Montserrat, Arial, Helvetica, sans-serif;
   font-weight: 500;
-  color: #fff;
-  padding-left: 10px;
-  padding-right: 10px;
+  color: var(--site-color-06);
+  padding-left: 8px;
+  padding-right: 8px;
   display: flex;
   align-items: center;
 }
 
 .header-main-nav ul {
   list-style: none;
-  float: left;
+  /* float: left; */
 }
 
 .header-main-nav ul li {
@@ -183,43 +192,94 @@ li {
   border-radius: 4px;
 }
 
-/* 
-Social Media Icons 
+/* Social Media Icons */
 .header-main-sm {
   width: fit-content;
-  height: 100%;
-  background-color: red;
+  height: 36px;
   display: flex;
+  flex-direction: row;
   align-items: center;
-  column-gap: 10px;
+  column-gap: 8px;
+  background-color: var(--site-color-06);
+  border-radius: 180px;
+  margin-left: auto;
+  margin-right: 12px;
 }
 
 .header-main-sm-ig {
-  width: 24px;
-  height: 24px;
-  background-image: url(../img/instagram.png);
+  width: 30px;
+  height: 30px;
+  background-image: url(../img/Icons/instagram.png);
   background-repeat: no-repeat;
   background-size: cover;
+  margin-left: 4px;
 }
 
 .header-main-sm-fb {
-  width: 24px;
-  height: 24px;
-  background-image: url(../img/facebook.png);
+  width: 30px;
+  height: 30px;
+  background-image: url(../img/Icons/facebook.png);
   background-repeat: no-repeat;
   background-size: cover;
 }
-*/
 
+.header-main-sm-x {
+  width: 30px;
+  height: 30px;
+  background-image: url(../img/Icons/x-logo.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 100%;
+}
+
+.header-main-sm-tt {
+  width: 30px;
+  height: 30px;
+  background-image: url(../img/Icons/TikTok.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 100%;
+}
+
+.header-main-sm-yt {
+  width: 30px;
+  height: 30px;
+  background-image: url(../img/Icons/YouTube.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 100%;
+  margin-right: 4px;
+}
+
+.header-main-sm-ig:hover {
+  background-image: url(../img/Icons/instagram-color.png);
+}
+
+.header-main-sm-fb:hover {
+  background-image: url(../img/Icons/facebook-color.png);
+}
+
+.header-main-sm-x:hover {
+  background-image: url(../img/Icons/x-logo-white.png);
+}
+
+.header-main-sm-tt:hover {
+  background-image: url(../img/Icons/TikTok-color.png);
+}
+
+.header-main-sm-yt:hover {
+  background-image: url(../img/Icons/YouTube-color.png);
+}
+
+/* BOOK A CALL CTA BUTTON IN HEADER */
 .cta-btn-header {
-  margin-left: auto;
   margin-right: 12px;
 }
 
 /* FOOTER MAIN */
 .footer-main {
   width: 100%;
-  padding: 60px 0 60px;
+  padding: 0 0 100px;
   background-color: var(--site-color-04);
 }
 
@@ -230,43 +290,18 @@ Social Media Icons
   align-items: flex-start;
 }
 
-.footer-main-testimonials-h2 {
-  display: none;
-}
-
-.footer-testimony {
-  flex-basis: 20%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  flex-wrap: wrap;
-}
-
-.footer-testimony img {
-  width: 100px;
-  height: 100px;
-  border: 3px solid var(--site-color-01);
-  border-radius: 50%;
-  object-fit: cover;
-}
-
-.footer-testimony p {
-  text-align: center;
-  padding: 20px;
-}
-
 .cta-btn-footer-main {
   margin-top: 24px;
   margin-bottom: 24px;
 }
 
 .footer-sitemap {
-  flex-basis: 100%;
   display: flex;
 }
 
 .footer-sitemap-nav {
+  display: block;
+  width: 300px;
   border-left: 2px solid var(--site-color-01);
   padding-left: 4px;
 }
@@ -275,25 +310,98 @@ Social Media Icons
   opacity: 0.75;
 }
 
-.footer-sitemap ul:nth-child(1) {
-  flex-basis: 180px;
-}
-
-.footer-sitemap ul:nth-child(2) {
-  flex-basis: 540px;
-}
-
-.footer-sitemap p {
+.footer-main-closer {
+  display: block;
+  width: 600px;
+  padding: 0 30px 0 30px;
   text-transform: uppercase;
 }
 
-.footer-sitemap ul:nth-child(3) {
-  flex-grow: 1;
+.footer-main-sm-directory {
+  display: block;
+  width: 300px;
 }
 
-.footer-sitemap ul:nth-child(3) li {
-  clear: both;
-  float: right;
+.footer-spacer {
+  flex-basis: 100%;
+  height: 24px;
+}
+
+.footer-main-sm {
+  width: fit-content;
+  height: 36px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  column-gap: 8px;
+  background-color: var(--site-color-06);
+  border-radius: 180px;
+  margin: 0 auto;
+}
+
+.footer-main-sm-ig {
+  width: 30px;
+  height: 30px;
+  background-image: url(../img/Icons/instagram.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-left: 4px;
+}
+
+.footer-main-sm-fb {
+  width: 30px;
+  height: 30px;
+  background-image: url(../img/Icons/facebook.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.footer-main-sm-x {
+  width: 30px;
+  height: 30px;
+  background-image: url(../img/Icons/x-logo.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 100%;
+}
+
+.footer-main-sm-tt {
+  width: 30px;
+  height: 30px;
+  background-image: url(../img/Icons/TikTok.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 100%;
+}
+
+.footer-main-sm-yt {
+  width: 30px;
+  height: 30px;
+  background-image: url(../img/Icons/YouTube.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 100%;
+  margin-right: 4px;
+}
+
+.footer-main-sm-ig:hover {
+  background-image: url(../img/Icons/instagram-color.png);
+}
+
+.footer-main-sm-fb:hover {
+  background-image: url(../img/Icons/facebook-color.png);
+}
+
+.footer-main-sm-x:hover {
+  background-image: url(../img/Icons/x-logo-white.png);
+}
+
+.footer-main-sm-tt:hover {
+  background-image: url(../img/Icons/TikTok-color.png);
+}
+
+.footer-main-sm-yt:hover {
+  background-image: url(../img/Icons/YouTube-color.png);
 }
 
 /* BURGER MENU BUTTON */
@@ -367,10 +475,6 @@ Social Media Icons
   }
 
   /* FONT SIZES */
-  h1 {
-    font-size: 2.4rem;
-  }
-
   h2 {
     font-size: 3.2rem;
   }
@@ -426,67 +530,50 @@ Social Media Icons
     display: none;
   }
 
+  /* Social Media Icons */
+  .header-main-sm {
+    display: none;
+  }
+
+  /* BOOK A CALL CTA BUTTON IN HEADER */
+  .cta-btn-header {
+    margin-left: auto;
+  }
+
   /* FOOTER MAIN */
   .footer-main {
-    padding: 24px 0 60px;
-  }
-
-  .footer-main-testimonials-h2 {
-    display: inline;
-    text-align: center;
-  }
-
-  .footer-testimony {
-    flex-basis: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    padding-top: 48px;
-  }
-
-  .footer-testimony p {
-    padding: 0;
-    padding-top: 12px;
+    padding: 0 0 60px;
   }
 
   .cta-btn-footer-main {
     margin-top: 24px;
-    margin-bottom: 32px;
+    margin-bottom: 24px;
   }
 
   .footer-sitemap {
     flex-wrap: wrap;
   }
 
+  /* DISPLAY SET TO NONE */
   .footer-sitemap-nav {
     border-left: none;
     padding-left: 0px;
-  }
-
-  .footer-sitemap ul:nth-child(1),
-  .footer-sitemap ul:nth-child(2) {
-    flex-basis: 100%;
     text-align: center;
-    padding-bottom: 24px;
-  }
-
-  .footer-sitemap ul:nth-child(1) {
     display: none;
   }
 
-  .footer-sitemap p {
-    text-transform: none;
-  }
-
-  .footer-sitemap ul:nth-child(3) {
-    flex-grow: 1;
-  }
-
-  .footer-sitemap ul:nth-child(3) li {
-    float: none;
+  .footer-main-closer {
+    width: 100%;
+    padding: 0;
     text-align: center;
+  }
+
+  /* DISPLAY SET TO NONE */
+  .footer-main-sm-directory {
+    width: 100%;
+    text-align: center;
+    padding: 24px 0;
+    display: none;
   }
 
 }
@@ -546,14 +633,10 @@ Social Media Icons
 
   .burger-menu ul li a:hover,
   .burger-menu ul li a:active {
-    background-color: #009900;
+    background-color: var(--site-color-01);
   }
 
   /* FONT SIZES */
-  h1 {
-    font-size: 2.4rem;
-  }
-
   h2 {
     font-size: 3.2rem;
   }
@@ -603,65 +686,38 @@ Social Media Icons
 
   /* FOOTER MAIN */
   .footer-main {
-    padding: 24px 0 60px;
-  }
-
-  .footer-main-testimonials-h2 {
-    display: inline;
-    text-align: center;
-  }
-
-  .footer-testimony {
-    flex-basis: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    padding-top: 48px;
-  }
-
-  .footer-testimony p {
-    padding: 0;
-    padding-top: 12px;
+    padding: 0 0 60px;
   }
 
   .cta-btn-footer-main {
     margin-top: 24px;
-    margin-bottom: 32px;
+    margin-bottom: 24px;
   }
 
   .footer-sitemap {
     flex-wrap: wrap;
   }
 
+  /* DISPLAY SET TO NONE */
   .footer-sitemap-nav {
     border-left: none;
     padding-left: 0px;
-  }
-
-  .footer-sitemap ul:nth-child(1),
-  .footer-sitemap ul:nth-child(2) {
-    flex-basis: 100%;
     text-align: center;
-    padding-bottom: 24px;
-  }
-
-  .footer-sitemap ul:nth-child(1) {
     display: none;
   }
 
-  .footer-sitemap p {
-    text-transform: none;
-  }
-
-  .footer-sitemap ul:nth-child(3) {
-    flex-grow: 1;
-  }
-
-  .footer-sitemap ul:nth-child(3) li {
-    float: none;
+  .footer-main-closer {
+    width: 100%;
+    padding: 0;
     text-align: center;
+  }
+
+  /* DISPLAY SET TO NONE */
+  .footer-main-sm-directory {
+    width: 100%;
+    text-align: center;
+    padding: 24px 0;
+    display: none;
   }
 
 }
@@ -729,7 +785,7 @@ Social Media Icons
   h1 {
     font-size: 3.6rem;
   }
-
+  
   h2 {
     font-size: 3.2rem;
   }
@@ -773,67 +829,50 @@ Social Media Icons
     display: none;
   }
 
+  /*SOCIAL MEDIA ICONS */
+  .header-main-sm {
+    display: none;
+  }
+
+  /* BOOK A CALL CTA BUTTON IN HEADER */
+  .cta-btn-header {
+    margin-left: auto;
+  }
+
   /* FOOTER MAIN */
   .footer-main {
-    padding: 24px 0 60px;
-  }
-
-  .footer-main-testimonials-h2 {
-    display: inline;
-    text-align: center;
-  }
-
-  .footer-testimony {
-    flex-basis: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    padding-top: 48px;
-  }
-
-  .footer-testimony p {
-    padding: 0;
-    padding-top: 12px;
+    padding: 0 0 60px;
   }
 
   .cta-btn-footer-main {
     margin-top: 24px;
-    margin-bottom: 32px;
+    margin-bottom: 24px;
   }
 
   .footer-sitemap {
     flex-wrap: wrap;
   }
 
+  /* DISPLAY SET TO NONE */
   .footer-sitemap-nav {
     border-left: none;
     padding-left: 0px;
-  }
-
-  .footer-sitemap ul:nth-child(1),
-  .footer-sitemap ul:nth-child(2) {
-    flex-basis: 100%;
     text-align: center;
-    padding-bottom: 24px;
-  }
-
-  .footer-sitemap ul:nth-child(1) {
     display: none;
   }
 
-  .footer-sitemap p {
-    text-transform: none;
-  }
-
-  .footer-sitemap ul:nth-child(3) {
-    flex-grow: 1;
-  }
-
-  .footer-sitemap ul:nth-child(3) li {
-    float: none;
+  .footer-main-closer {
+    width: 100%;
+    padding: 0;
     text-align: center;
+  }
+
+  /* DISPLAY SET TO NONE */
+  .footer-main-sm-directory {
+    width: 100%;
+    text-align: center;
+    padding: 24px 0;
+    display: none;
   }
 
 }
@@ -947,65 +986,38 @@ Social Media Icons
 
   /* FOOTER MAIN */
   .footer-main {
-    padding: 24px 0 60px;
-  }
-
-  .footer-main-testimonials-h2 {
-    display: inline;
-    text-align: center;
-  }
-
-  .footer-testimony {
-    flex-basis: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    padding-top: 48px;
-  }
-
-  .footer-testimony p {
-    padding: 0;
-    padding-top: 12px;
+    padding: 0 0 60px;
   }
 
   .cta-btn-footer-main {
     margin-top: 24px;
-    margin-bottom: 32px;
+    margin-bottom: 24px;
   }
 
   .footer-sitemap {
     flex-wrap: wrap;
   }
 
+  /* DISPLAY SET TO NONE */
   .footer-sitemap-nav {
     border-left: none;
     padding-left: 0px;
-  }
-
-  .footer-sitemap ul:nth-child(1),
-  .footer-sitemap ul:nth-child(2) {
-    flex-basis: 100%;
     text-align: center;
-    padding-bottom: 24px;
-  }
-
-  .footer-sitemap ul:nth-child(1) {
     display: none;
   }
 
-  .footer-sitemap p {
-    text-transform: none;
-  }
-
-  .footer-sitemap ul:nth-child(3) {
-    flex-grow: 1;
-  }
-
-  .footer-sitemap ul:nth-child(3) li {
-    float: none;
+  .footer-main-closer {
+    width: 100%;
+    padding: 0;
     text-align: center;
+  }
+
+  /* DISPLAY SET TO NONE */
+  .footer-main-sm-directory {
+    width: 100%;
+    text-align: center;
+    padding: 24px 0;
+    display: none;
   }
 
 }
@@ -1015,14 +1027,95 @@ Social Media Icons
 /* STANDARD LAPTOPS AND DESKTOPS */
 @media only screen and (min-width: 993px) and (max-width: 1200px) {
   
+  /* BURGER MENU BUTTON */
+  .burger-menu-btn {
+    display: block;
+    position: absolute;
+    margin-left: 8px;
+    width: 50px;
+    height: 50px;
+    background-image: url(../img/Icons/burger-menu.png), url(../img/Icons/burger-menu-close.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center, center left 50px;
+  }
+
+  .burger-menu {
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    z-index: 900;
+    background-color: #1e1e1e;
+  }
+
+  .burger-menu ul {
+    width: 100%;
+    height: calc(100vh - 60px);
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    overflow-y: scroll;
+  }
+
+  .burger-menu ul li {
+    flex-basis: 100%;
+    border-top: 2px solid #000;
+  }
+
+  .burger-menu ul li:last-child {
+    border-bottom: 2px solid #000;
+  }
+
+  .burger-menu ul li a {
+    display: block;
+    height: 100%;
+    font-size: 3rem;
+    padding: 30px;
+    flex-basis: 100%;
+    text-align: center;
+  }
+
+  .burger-menu ul li a:hover,
+  .burger-menu ul li a:active {
+    background-color: #009900;
+  }
+
   /* WRAPPER MAIN*/
   .wrapper-main {
     width: 80%;
   }
 
+  /* HEADER MAIN */
+  .header-main {
+    position: fixed;
+    top: 0;
+  }
+  
+  .brand-name-full {
+    margin-left: 42px;
+  }
+
+  .header-main-nav {
+    display: none;
+  }
+
   /*FOOTER MAIN*/
-  .footer-sitemap ul:nth-child(2) {
-    flex-basis: 55%;
+  .cta-btn-footer-main {
+    margin-top: 24px;
+    margin-bottom: 24px;
+  }
+
+  .footer-sitemap-nav {
+    width: 20%;
+  }
+
+  .footer-main-closer {
+    width: 60%;
+  }
+
+  .footer-main-sm-directory {
+    width: 20%;
   }
 
 }
